@@ -1,33 +1,28 @@
 package com.mazen.ProductService.service;
 
-import com.mazen.ProductService.dto.ProductColorRequest;
-import com.mazen.ProductService.dto.ProductRequest;
+import com.mazen.ProductService.dto.ProductDetailsResponse;
+import com.mazen.ProductService.dto.request.ProductRequest;
 import com.mazen.ProductService.dto.ProductResponse;
-import com.mazen.ProductService.dto.ProductSizeRequest;
 import com.mazen.ProductService.exceptions.NotFoundException;
-import com.mazen.ProductService.exceptions.ServerErrorException;
 import com.mazen.ProductService.model.Product;
+import com.mazen.ProductService.model.ProductCategory;
 import com.mazen.ProductService.model.ProductColor;
-import com.mazen.ProductService.model.ProductSize;
 import com.mazen.ProductService.repository.ProductColorRepository;
 import com.mazen.ProductService.repository.ProductRepository;
-import com.mazen.ProductService.repository.ProductSizeRepository;
 import com.mazen.ProductService.util.Colors;
+import com.mazen.ProductService.util.PagedResponse;
 import com.mazen.ProductService.util.Size;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.modelmapper.ModelMapper;
-import org.springframework.core.ParameterizedTypeReference;
-import org.springframework.core.io.ByteArrayResource;
-import org.springframework.http.*;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import org.springframework.util.LinkedMultiValueMap;
-import org.springframework.util.MultiValueMap;
-import org.springframework.web.client.RestTemplate;
 import org.springframework.web.multipart.MultipartFile;
 
-import java.awt.*;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.List;
@@ -39,90 +34,35 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 public class ProductService {
     private final ProductRepository productRepository;
-    private final ModelMapper modelMapper;
-    private final RestTemplate restTemplate;
-    private final ProductSizeRepository productSizeRepository;
+    private final MappingService mappingService;
     private final ProductColorRepository productColorRepository;
-
-    private ProductColor convertToProductColor(ProductColorRequest productColorRequest,ProductSize productSize){
-        ProductColor productColor1 =modelMapper.map(productColorRequest,ProductColor.class);
-        productColor1.setProductSize(productSize);
-        return productColor1;
-    }
-
-    private ProductSize convertToProductSize(ProductSizeRequest productSizeRequest,Product product){
-        ProductSize productSize = modelMapper.map(productSizeRequest,ProductSize.class);
-
-        List<ProductColor> productColors = productSizeRequest.getProductColorRequests().
-                        stream().map(productColorRequest -> this.convertToProductColor(productColorRequest,productSize)).toList();
-
-        productSize.setProductColors(productColors);
-
-        productSize.setProduct(product);
-        return productSize;
-    }
-
-    public List<String> saveImagesRequest(List<MultipartFile> files,Product product1) throws IOException {
-        HttpHeaders headers = new HttpHeaders();
-        headers.setContentType(MediaType.MULTIPART_FORM_DATA);
-
-        MultiValueMap<String, Object> body = new LinkedMultiValueMap<>();
-        for(MultipartFile f : files){
-            ByteArrayResource resource = new ByteArrayResource(f.getBytes()) {
-                @Override
-                public String getFilename() {
-                    return f.getOriginalFilename();
-                }
-            };
-            body.add("images", resource);
-        }
-        HttpEntity<MultiValueMap<String, Object>> requestEntity = new HttpEntity<>(body, headers);
-
-        String serverUrl = "http://localhost:8300/v1/file/"+product1.getId();
-
-        ResponseEntity<List<String>> response = restTemplate.exchange(
-                serverUrl,
-                HttpMethod.POST,
-                requestEntity,
-                new ParameterizedTypeReference<List<String>>() {}
-        );
-        if(!response.getStatusCode().equals(HttpStatus.OK)){
-            log.error("Error with server when saving images");
-            throw new ServerErrorException("Error with server when saving images");
-        }
-        return response.getBody();
-    }
+    private final RestTemplateService restTemplateService;
+    private final ModelMapper modelMapper;
 
 
     @Transactional
     public void createProduct(ProductRequest productRequest) throws IOException {
         Product product = modelMapper.map(productRequest,Product.class);
 
-        List<ProductSize> productSizes =  productRequest.getProductSizeRequests()
-                .stream().map(productSizeRequest ->  this.convertToProductSize(productSizeRequest,product))
-                .toList();
+        Product savedProduct = productRepository.save(product);
+        List<ProductColor> productColors = productRequest
+                .getProductColorRequests()
+                .stream()
+                .map(productColorRequest -> mappingService
+                        .convertToProductColor(productColorRequest, savedProduct))
+                .collect(Collectors.toList());
 
-        product.setProductSizes(productSizes);
-        Product product1 = productRepository.save(product);
+        savedProduct.setProductColors(productColors);
         List<MultipartFile> files = productRequest.getImages();
+        List<String> imagesPaths = restTemplateService.saveImagesRequest(files, savedProduct);
+        savedProduct.setImagesPaths(imagesPaths);
 
-        product1.setImagesPaths(saveImagesRequest(files,product1));
-        productRepository.save(product1);
+        productRepository.save(savedProduct);
     }
 
     @Transactional
     public void deleteProduct(String id){
-        String serverUrl = "http://localhost:8300/v1/file/"+id;
-        ResponseEntity<Boolean> response = restTemplate.exchange(
-                serverUrl,
-                HttpMethod.DELETE,
-                null,
-                new ParameterizedTypeReference<Boolean>() {}
-        );
-        if(!response.getStatusCode().equals(HttpStatus.OK)){
-            log.error("Error with server when deleting images");
-            throw new ServerErrorException("Error with server when deleting images");
-        }
+        restTemplateService.deleteProductImages(id);
         productRepository.deleteById(id);
     }
 
@@ -136,15 +76,19 @@ public class ProductService {
         Product product = getProductByIdOptional(id);
         modelMapper.map(productRequest,product);
 
-        product.setImagesPaths(saveImagesRequest(productRequest.getImages(),product));
-        List<ProductSize> productSizes =  productRequest.getProductSizeRequests()
-                .stream().map(productSizeRequest ->  this.convertToProductSize(productSizeRequest,product))
-                .toList();
+        product.setImagesPaths(restTemplateService.saveImagesRequest(productRequest.getImages(),product));
+        List<ProductColor> productColors = productRequest
+                .getProductColorRequests()
+                .stream()
+                .map(productColorRequest -> mappingService
+                        .convertToProductColor(productColorRequest, product))
+                .collect(Collectors.toList());
 
-        product.setProductSizes(productSizes);
+        product.setProductColors(productColors);
 
         productRepository.save(product);
     }
+
 
     public List<ProductResponse> getProductsByIds(List<String> ids){
         List<Product> products = productRepository.findAllById(ids);
@@ -161,51 +105,58 @@ public class ProductService {
         if (!missingIds.isEmpty()) {
             throw new NotFoundException("Products not found with ids: " + missingIds);
         }
-        return products.stream().map(prod->{
-            ProductResponse productResponse =  modelMapper.map(prod,ProductResponse.class);
-            if(!prod.getImagesPaths().isEmpty())
-                productResponse.setImageUrl(prod.getImagesPaths().get(0));
-            return productResponse;
-        }).toList();
+        return products.stream().map(mappingService::createProductResponse).toList();
     }
 
     @Transactional
     public void changeItemInventory(String productId, Size size, Colors color, int numberOfItems){
         Product product = getProductByIdOptional(productId);
-        Optional<ProductSize> productSize =
-                productSizeRepository.findByProductAndSize(product,size);
-        if(productSize.isEmpty()){
-            ProductSize productSize1 = ProductSize.builder()
-                    .product(product)
-                    .size(size).build();
-            ProductColor productColor = ProductColor.builder()
-                    .productSize(productSize1)
-                    .colors(color)
-                    .numberInStock(numberOfItems)
-                    .build();
-            productSize1.getProductColors().add(productColor);
-            productSizeRepository.save(productSize1);
-            return;
-        }
-
         Optional<ProductColor> productColor =
-                productColorRepository.findByProductSizeAndColor(productSize.get(),color);
-        if(productColor.isEmpty()){
-            ProductColor productColor1 = ProductColor.builder()
-                    .productSize(productSize.get())
-                    .colors(color)
-                    .numberInStock(numberOfItems)
-                    .build();
-            productSize.get().getProductColors().add(productColor1);
-            productSizeRepository.save(productSize.get());
+                productColorRepository.findByProductSizeAndColor(size,color,product);
+        if(productColor.isPresent()){
+            productColor.get().setNumberInStock(numberOfItems);
+            productColorRepository.save(productColor.get());
             return;
         }
+        Optional<ProductColor> productColor1 =
+                productColorRepository.findByProductByColor(color,product);
+        if(productColor1.isPresent()){
+            productColor1.get().setSize(size);
+            productColor1.get().setColors(color);
+            productColorRepository.save(productColor1.get());
+            return;
+        }
+        ProductColor productColor2 = ProductColor.builder()
+                .colors(color)
+                .size(size)
+                .product(product)
+                .numberInStock(numberOfItems)
+                .build();
 
-
-        productColor.get().setNumberInStock(numberOfItems);
-        productColorRepository.save(productColor.get());
+        product.getProductColors().add(productColor2);
+        productRepository.save(product);
     }
 
+    @Transactional
+    public void changeItemInventoryOnlyColor(String productId, Colors color, int numberOfItems){
+        Product product = getProductByIdOptional(productId);
+
+        Optional<ProductColor> productColor1 =
+                productColorRepository.findByProductByColor(color,product);
+        if(productColor1.isPresent()){
+            productColor1.get().setColors(color);
+            productColorRepository.save(productColor1.get());
+            return;
+        }
+        ProductColor productColor2 = ProductColor.builder()
+                .colors(color)
+                .product(product)
+                .numberInStock(numberOfItems)
+                .build();
+
+        product.getProductColors().add(productColor2);
+        productRepository.save(product);
+    }
     public boolean isProductExist(String product_id){
         Optional<Product> product = productRepository.findById(product_id);
         return product.isPresent();
@@ -220,6 +171,32 @@ public class ProductService {
             }
         });
         return idsNotFound.isEmpty();
+    }
+
+    public ProductDetailsResponse getProductDetailsById(String id){
+        Product product = getProductByIdOptional(id);
+        return mappingService.createProductDetailsResponse(product);
+    }
+
+
+    public PagedResponse<ProductResponse> getAllProductByCategory(ProductCategory category, int page, int size){
+        Pageable pageable = PageRequest.of(page,size, Sort.by("createdAt").descending());
+        Page<Product> products= productRepository.getAllProductsByCategory(pageable, category);
+        List<ProductResponse> productResponses = products
+                .map(mappingService::createProductResponse).toList();
+        return new PagedResponse<>(productResponses,
+                page,size,products.getTotalElements(),
+                products.getTotalPages(),products.isLast());
+    }
+
+    public PagedResponse<ProductResponse> getAllProductsRandom(int page , int size){
+        Pageable pageable = PageRequest.of(page,size, Sort.by("createdAt").descending());
+        Page<Product> products= productRepository.getAllProductsRandom(pageable);
+        List<ProductResponse> productResponses = products
+                .map(mappingService::createProductResponse).toList();
+        return new PagedResponse<>(productResponses,
+                page,size,products.getTotalElements(),
+                products.getTotalPages(),products.isLast());
     }
 
 }
